<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.kalbe.kalbeproject.module.product.viewmodel.ProductViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_dp_50"
            android:text="@string/add_product"
            android:textSize="@dimen/px_dp_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_sku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_dp_50"
            android:layout_marginTop="@dimen/px_dp_100"
            android:layout_marginEnd="@dimen/px_dp_50"
            android:background="@drawable/bg_round_r8_primary_dark"
            android:backgroundTint="@color/colorLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_title">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_sku"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_dp_60"
                android:layout_margin="@dimen/px_dp_10"
                android:background="@null"
                android:hint="@string/sku"
                android:textSize="@dimen/px_sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_dp_50"
            android:layout_marginTop="@dimen/px_dp_20"
            android:layout_marginEnd="@dimen/px_dp_50"
            android:background="@drawable/bg_round_r8_primary_dark"
            android:backgroundTint="@color/colorLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_sku">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_product_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_dp_60"
                android:layout_margin="@dimen/px_dp_10"
                android:background="@null"
                android:hint="@string/product_name"
                android:inputType="textPassword"
                android:textSize="@dimen/px_sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_dp_50"
            android:layout_marginTop="@dimen/px_dp_20"
            android:layout_marginEnd="@dimen/px_dp_50"
            android:background="@drawable/bg_round_r8_primary_dark"
            android:backgroundTint="@color/colorLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_product_name">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_qty"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_dp_60"
                android:layout_margin="@dimen/px_dp_10"
                android:background="@null"
                android:hint="@string/qty"
                android:inputType="numberDecimal"
                android:textSize="@dimen/px_sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_dp_50"
            android:layout_marginTop="@dimen/px_dp_20"
            android:layout_marginEnd="@dimen/px_dp_50"
            android:background="@drawable/bg_round_r8_primary_dark"
            android:backgroundTint="@color/colorLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_qty">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_price"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_dp_60"
                android:layout_margin="@dimen/px_dp_10"
                android:background="@null"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textSize="@dimen/px_sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_dp_50"
            android:layout_marginTop="@dimen/px_dp_20"
            android:layout_marginEnd="@dimen/px_dp_50"
            android:background="@drawable/bg_round_r8_primary_dark"
            android:backgroundTint="@color/colorLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_price">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_unit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_dp_60"
                android:layout_margin="@dimen/px_dp_10"
                android:background="@null"
                android:hint="@string/unit"
                android:textSize="@dimen/px_sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_dp_50"
            android:layout_marginTop="@dimen/px_dp_20"
            android:layout_marginEnd="@dimen/px_dp_50"
            android:background="@drawable/bg_round_r8_primary_dark"
            android:backgroundTint="@color/colorLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_unit">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_dp_60"
                android:layout_margin="@dimen/px_dp_10"
                android:spinnerMode="dialog"
                android:textSize="@dimen/px_sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add_product"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_dp_80"
            android:layout_marginTop="@dimen/px_dp_50"
            android:layout_marginEnd="@dimen/px_dp_50"
            android:background="@drawable/bg_round_r8_primary_dark"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:enabled="@{viewModel.isEnableButton}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>